--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/nanox-secure-sdk"]
 	path = deps/nanox-secure-sdk
 	url = https://github.com/LedgerHQ/nanox-secure-sdk.git
+[submodule "deps/picohash"]
+	path = deps/picohash
+	url = https://github.com/kazuho/picohash
