modify app makefile for nanopb

--- a/app/Makefile
+++ b/app/Makefile
@@ -187,6 +187,7 @@ APP_SOURCE_PATH += $(MY_DIR)/../deps/ledger-zxlib/include
 APP_SOURCE_PATH += $(MY_DIR)/../deps/ledger-zxlib/src
 APP_SOURCE_PATH += $(MY_DIR)/../deps/ledger-zxlib/app/common
 APP_SOURCE_PATH += $(MY_DIR)/../deps/picohash/
+APP_SOURCE_PATH += $(MY_DIR)/../deps/nanopb_tiny/
 
 SDK_SOURCE_PATH += lib_stusb lib_stusb_impl
 SDK_SOURCE_PATH  += lib_ux
@@ -195,6 +196,7 @@ SDK_SOURCE_PATH  += lib_ux
 CFLAGS += -I$(MY_DIR)/../deps/tinycbor/src
 APP_SOURCE_PATH += $(MY_DIR)/../deps/tinycbor-ledger
 
+CFLAGS += -I$(MY_DIR)/../deps/nanopb_tiny/
 
 .PHONY: rust
 rust:
