--- a/js/package.json
+++ b/js/package.json
@@ -45,7 +45,8 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "loginZondax": "npm --scope=@Zondax login"
   },
   "moduleDirectories": [
     "node_modules",
