--- a/js/package.json
+++ b/js/package.json
@@ -67,7 +67,6 @@
     "yarn.lock"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://npm.pkg.github.com/"
+    "access": "public"
   }
 }
