--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,12 @@ jobs:
       - checkout
       - run: git submodule update --init --recursive
       - run:
+          name: Install node + yarn
+          command: |
+            nvm install 14.4.0
+            nvm use 14.4.0
+            npm install -g yarn
+      - run:
           name: Build
           command: |
             cd ./js
