--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ string(APPEND CMAKE_LINKER_FLAGS " -fno-omit-frame-pointer -g")
 
 add_definitions(-DAPP_STANDARD)
 
-if(ENABLE_FUZZING)
+if (ENABLE_FUZZING)
     add_definitions(-DFUZZING_BUILD_MODE_UNSAFE_FOR_PRODUCTION=1)
     SET(ENABLE_SANITIZERS ON CACHE BOOL "Sanitizer automatically enabled" FORCE)
     SET(CMAKE_BUILD_TYPE Debug)
@@ -41,30 +41,30 @@ if(ENABLE_FUZZING)
         # require at least clang 3.2
         if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10.0)
             message(FATAL_ERROR "Clang version must be at least 10.0!")
-        endif()
-    else()
+        endif ()
+    else ()
         message(FATAL_ERROR
                 "You are using an unsupported compiler! Fuzzing only works with Clang 10.\n"
                 "1. Install clang-10 \n"
                 "2. Pass -DCMAKE_C_COMPILER=clang-10 -DCMAKE_CXX_COMPILER=clang++-10")
-    endif()
+    endif ()
 
     string(APPEND CMAKE_C_FLAGS " -fsanitize=fuzzer-no-link")
     string(APPEND CMAKE_CXX_FLAGS " -fsanitize=fuzzer-no-link")
     string(APPEND CMAKE_LINKER_FLAGS " -fsanitize=fuzzer-no-link")
-endif()
+endif ()
 
-if(ENABLE_COVERAGE)
+if (ENABLE_COVERAGE)
     string(APPEND CMAKE_C_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
     string(APPEND CMAKE_CXX_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
     string(APPEND CMAKE_LINKER_FLAGS " -fprofile-instr-generate -fcoverage-mapping")
-endif()
+endif ()
 
-if(ENABLE_SANITIZERS)
+if (ENABLE_SANITIZERS)
     string(APPEND CMAKE_C_FLAGS " -fsanitize=address,undefined -fsanitize-recover=address,undefined")
     string(APPEND CMAKE_CXX_FLAGS " -fsanitize=address,undefined -fsanitize-recover=address,undefined")
     string(APPEND CMAKE_LINKER_FLAGS " -fsanitize=address,undefined -fsanitize-recover=address,undefined")
-endif()
+endif ()
 
 include(cmake/conan/CMakeLists.txt)
 add_subdirectory(cmake/gtest)
@@ -157,14 +157,15 @@ set_tests_properties(unittests PROPERTIES WORKING_DIRECTORY ${CMAKE_CURRENT_SOUR
 ##############################################################
 ##############################################################
 #  Fuzz Targets
-if(ENABLE_FUZZING)
+if (ENABLE_FUZZING)
     set(FUZZ_TARGETS
-        parser_parse
-        )
+            parser_parse
+            parser_protobuf
+            )
 
-    foreach(target ${FUZZ_TARGETS})
+    foreach (target ${FUZZ_TARGETS})
         add_executable(fuzz-${target} ${CMAKE_CURRENT_SOURCE_DIR}/fuzz/${target}.cpp)
         target_link_libraries(fuzz-${target} PRIVATE app_lib)
         target_link_options(fuzz-${target} PRIVATE "-fsanitize=fuzzer")
-    endforeach()
-endif()
+    endforeach ()
+endif ()
