--- a/js/package.json
+++ b/js/package.json
@@ -1,52 +1,49 @@
 {
   "name": "@zondax/ledger-dfinity",
+  "author": "Zondax GmbH",
+  "license": "Apache-2.0",
   "version": "0.1.0",
   "description": "Node API for Dfinity App (Ledger Nano S/X)",
-  "main": "./dist/index.js",
+  "main": "./dist/index.ts",
+  "typings": "./dist/index.d.ts",
   "types": "./dist/index.d.ts",
+  "homepage": "https://github.com/zondax/ledger-dfinity",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zondax/ledger-dfinity.git"
   },
   "keywords": [
+    "Zondax",
     "Ledger",
     "Javascript",
     "Dfinity"
   ],
-  "author": "Zondax GmbH",
-  "license": "Apache-2.0",
+  "scripts": {
+    "build": "tsc"
+  },
   "bugs": {
     "url": "https://github.com/zondax/ledger-dfinity/issues"
   },
-  "homepage": "https://github.com/zondax/ledger-dfinity",
   "dependencies": {
-    "@babel/runtime": "^7.13.9",
-    "@ledgerhq/hw-transport": "^5.45.0",
-    "@types/ledgerhq__hw-transport": "^4.21.3"
+    "@ledgerhq/hw-transport": "^5.39.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "babel-eslint": "^10.1.0",
+    "@types/ledgerhq__hw-transport": "^4.21.3",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
     "core-js": "^3.8.3",
     "crypto-js": "4.0.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.3.1",
-    "index.js": "^0.0.3",
+    "eslint-plugin-jest": "^24.3.3",
+    "jest": "^26.6.3",
     "prettier": "^2.0.4",
     "secp256k1": "^4.0.0",
-    "typescript": "^4.1.3"
-  },
-  "scripts": {
-    "build": "tsc",
-    "loginZondax": "npm --scope=@Zondax login"
+    "typescript": "^4.2.3"
   },
   "moduleDirectories": [
     "node_modules",
