add missing file on published package

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -109,6 +109,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
+          files: ./app/pkg/installer_s.sh
           tag_name: ${{ steps.vars.outputs.tag_name }}
           draft: false
           prerelease: false
