--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.17.0'
+          registry-url: "https://registry.npmjs.org"
+          scope: "@zondax"
       - name: Install yarn
         run: npm install -g yarn
       - name: Build package
