--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,16 +12,18 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    container:
-      image: zondax/circleci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install deps
+        run: |
+          sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
+          make deps
+          brew install conan
+          conan config install https://github.com/conan-io/conanclientcert.git
       - run: cmake -DCMAKE_BUILD_TYPE=Debug . && make
-      # Unfortunately need to disable leak sanitizer https://github.com/google/sanitizers/issues/916
-      # Still run all other ASAN components
       - run: GTEST_COLOR=1 ASAN_OPTIONS=detect_leaks=0 ctest -VV
 
   build_ledger:
