--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,9 @@
 name: "Test/Build"
-on: [push]
+on:
+  workflow_dispatch:
+  push:
+  pull_request:
+    branches: [ master ]
 
 jobs:
   configure:
