--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,12 @@
-sonar.projectKey=LedgerHQ_app-icp
-sonar.organization=ledger
+sonar.projectKey=Zondax_ledger-icp
+sonar.organization=zondax
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=app-icp
+#sonar.projectName=ledger-icp
+#sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
+#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
-
-sonar.cfamily.threads=1
-sonar.cfamily.cache.enabled=false
-
-sonar.python.version=3.8, 3.9, 3.10
+#sonar.sourceEncoding=UTF-8
