--- a/js/package.json
+++ b/js/package.json
@@ -25,45 +25,22 @@
     "url": "https://github.com/zondax/ledger-icp/issues"
   },
   "dependencies": {
-    "@ledgerhq/hw-transport": "^6.24.1"
+    "@zondax/ledger-js": "^0.2.1"
   },
   "devDependencies": {
-    "@types/ledgerhq__hw-transport": "^4.21.4",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "bip32": "^3.0.1",
-    "bip39": "^3.0.4",
-    "core-js": "^3.21.0",
-    "crypto-js": "4.1.1",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.5.1",
-    "prettier": "^2.5.1",
-    "secp256k1": "^4.0.3",
-    "typescript": "^4.5.5"
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
   },
-  "moduleDirectories": [
-    "node_modules",
-    "dist"
-  ],
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
   "files": [
-    "dist/*",
-    "LICENSE",
-    "yarn.lock"
-  ],
-  "publishConfig": {
-    "access": "public"
-  }
+    "dist/**/*"
+  ]
 }
