--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "es2020",
     "strict": true,
     "esModuleInterop": true,
     "declaration": true,
