--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ file(GLOB_RECURSE LIB_SRC
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/crypto.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/base32.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/protobuf/*.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/app/src/parser_print_*.c
         )
 
 add_library(app_lib STATIC
