--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -235,7 +235,7 @@ jobs:
       image: zondax/ledger-app-builder:latest
       options: --user ${{ needs.configure.outputs.uid_gid }}
       env:
-        BOLOS_SDK: /opt/nanosplus-secure-sdk
+        BOLOS_SDK: /opt/stax-secure-sdk
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -244,7 +244,7 @@ jobs:
       - name: Install deps
         run: pip install ledgerblue
 
-      - name: Build NanoSP
+      - name: Build Stax
         shell: bash -l {0}
         run: make
       - name: Set tag
