--- a/app/.gitignore
+++ b/app/.gitignore
@@ -38,7 +38,14 @@
 cmake-build-debug/
 \.idea/workspace\.xml
 \.idea/
-
+src/ledger/bin/
+src/ledger/debug/
+src/ledger/obj/
+obj/app\.elf
+debug/app\.map
+debug/app\.asm
+bin/app\.hex
+bin/app\.elf
 glyphs/glyphs\.h
 glyphs/glyphs\.c
 obj/
