--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["staticlib"]
 minicbor = { version = "0.24.2", default-features = false }
 no-std-compat = { version = "0.4.1" }
 bls_signature = { package = "ic-verify-bls-signature", version = "0.3.0", default-features = false }
+sha2 = { version = "0.10.8", default-features = false }
 
 [dev-dependencies]
 no-std-compat = { version = "0.4.1", features = ["std"] }
