--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -15,11 +15,14 @@ minicbor = { version = "0.24.2", default-features = false }
 no-std-compat = { version = "0.4.1" }
 bls_signature = { package = "ic-verify-bls-signature", version = "0.3.0", default-features = false }
 sha2 = { version = "0.10.8", default-features = false }
+arrayref = { version = "0.3.7", default-features = false }
 
 [dev-dependencies]
 no-std-compat = { version = "0.4.1", features = ["std"] }
 hex = { version = "0.4" }
-minicbor = { version = "0.24.2" }
+minicbor = { version = "0.24.2", features = ["std"] }
+ic-certification = { version = "2.5.0", features = ["serde"] }
+serde_cbor = "0.11.2"
 
 
 [target.'cfg(fuzzing)'.dependencies]
