--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -16,6 +16,7 @@ no-std-compat = { version = "0.4.1" }
 bls_signature = { package = "ic-verify-bls-signature", version = "0.3.0", default-features = false }
 sha2 = { version = "0.10.8", default-features = false }
 arrayref = { version = "0.3.7", default-features = false }
+nom = { version = "7.1.3", default-features = false }
 
 [dev-dependencies]
 no-std-compat = { version = "0.4.1", features = ["std"] }
